# habitica-ereader-frontend

./: .env-example  Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
static/: login.html  main.css
templates/: index.html
