[package]
name = "rust_habitica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = {version="0.11.11", features=["blocking", "json"]}
serde = {version = "1.0.139", features=["derive"]}
dotenv = "0.15.0"
text_io = "0.1.10"
chrono = "0.4.19"
axum = {version="0.6"}
tokio = { version="1", features=["full"]}
tower-http = { version = "0.4", features = ["fs"] }
askama = "0.12.1"
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-macros = "0.3.8"
